# jwt-hack

./: .gitignore  .gitmodules  .goreleaser.yml  404.html  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  config.example.toml  go.mod  go.sum  goyo.js  index.html  justfile  llms.txt  main.go  robots.txt  rss.xml  search.json  search_index.en.js  sitemap.xml
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: benchmarks.yml  cd-aur.yml  cd-crates.yml  cd-dockerhub.yml  cd-ghcr.yml  cd-homebrew-tap.yml  cd-release.yml  cd-release_asset.yml  cd-snapcraft.yml  ci-contributors.yml  ci-packaging.yml  ci.yml  codeql-analysis.yml  contributors.yml  docker-image.yml  docker-publish.yml  fuzz.yml  ghcr.yml  go.yml  goyo-update.yml  hwaro.yml  publish_homebrew_tap.yml  snapcraft.yml  zola.yml
advanced/: index.html
advanced/configuration/: index.html
advanced/performance/: index.html
advanced/performance-optimization/: index.html
advanced/scripting/: index.html
advanced/scripting-automation/: index.html
aur/: PKGBUILD
benches/: jwt_benchmarks.rs
cmd/: crack.go  decode.go  encode.go  payload.go  root.go  transfer.go  version.go
contributing/: index.html
css/: font-awesome.min.css  main.css  style.css
docs/: .gitignore  AGENTS.md  README.md  config.toml
docs/archetypes/: default.md  getting-started.md
docs/content/: _index.md  index.md
docs/content/advanced/: _index.md  performance-optimization.md  scripting-automation.md
docs/content/contributing/: _index.md  index.md
docs/content/get_started/: _index.md  installation.md  introduction.md  quickstart.md
docs/content/reference/: _index.md  environment-variables.md
docs/content/support/: _index.md  community.md  contributing.md  faq.md  troubleshooting.md
docs/content/usage/: _index.md  configuration.md  examples.md
docs/public/: 404.html  index.html  llms.txt  robots.txt  rss.xml  search.json  sitemap.xml
docs/public/advanced/: index.html
docs/public/css/: style.css
docs/public/get_started/: index.html
docs/public/reference/: index.html
docs/public/support/: index.html
docs/public/usage/: index.html
docs/static/css/: style.css
docs/static/js/: search.js
docs/templates/: 404.html  base.html  footer.html  header.html  landing.html  page.html  section.html  sidebar.html  taxonomy.html  taxonomy_term.html
docs/templates/partials/: nav.html  search.html  sidebar.html
docs/templates/shortcodes/: alert.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: header_parsing.rs  jwe_decode.rs  jwt_decode.rs
get_started/: index.html
get_started/features/: index.html
get_started/installation/: index.html
get_started/introduction/: index.html
get_started/quickstart/: index.html
icons/: site.webmanifest
js/: copy_code.js  copy_heading_link.js
pkg/crack/: brute.go  crack.go  file.go
pkg/jwt/: jwt.go  jwt_test.go
pkg/payload/: payload.go
pkg/printing/: banner.go  version.go
reference/: index.html
reference/environment-variables/: index.html
samples/: jwt.txt  wordlist.txt
scripts/: version_check.cr  version_update.cr
snap/: snapcraft.yaml  snapcraft.yml
src/: config.rs  jwe_attacks.rs  lib.rs  main.rs  output.rs
src/cmd/: crack.rs  decode.rs  encode.rs  jwks.rs  mcp.rs  mod.rs  payload.rs  scan.rs  server.rs  shell.rs  verify.rs  version.rs
src/cmd/shell/: capture.rs  (+4 more)
src/crack/: brute.rs  field.rs  mod.rs  wordlist_preset.rs
src/jwks/: mod.rs
src/jwt/: mod.rs  test_ec_p256_private.pem  test_ec_p256_public.pem  test_ec_p521_private.pem  test_ec_p521_public.pem  test_ec_private.pem  test_ec_public.pem  test_ed25519_private.pem  test_ed25519_public.pem  test_rsa_2048_private.pem  test_rsa_2048_public.pem  test_rsa_private.pem  test_rsa_public.pem
src/payload/: mod.rs
src/printing/: banner.rs  mod.rs  theme.rs  version.rs
src/utils/: compression.rs  mod.rs
support/: index.html
support/changelog/: index.html
support/community/: index.html
support/contributing/: index.html
support/faq/: index.html
support/troubleshooting/: index.html
tags/: index.html
tests/: e2e.rs  interop.rs
usage/: index.html
usage/commands/: index.html
usage/configuration/: index.html
usage/crack/: index.html
usage/decode/: index.html
usage/encode/: index.html
usage/examples/: index.html
usage/mcp/: index.html
usage/options/: index.html
usage/payload/: index.html
usage/scan/: index.html
usage/server/: index.html
usage/verify/: index.html
(+64 files in other folders)
