[package]
name = "jwt-hack"
version = "2.4.0"
edition = "2021"
authors = ["hahwul"]
description = "Hack the JWT (JSON Web Token) - A tool for JWT security testing and token manipulation"
repository = "https://github.com/hahwul/jwt-hack"
license = "MIT"
keywords = ["jwt", "security", "penetration-testing", "hacking", "cli"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
jsonwebtoken = "10.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
base64 = "0.22.1"
colored = "3.0.0"
log = "0.4"
env_logger = "0.11"
indicatif = "0.17"
rayon = "1.7"
tokio = { version = "1.32", features = ["full"] }
hmac-sha256 = "1.1.6"
chrono = "0.4"
tempfile = "3.20.0"
flate2 = "1.0"
josekit = "0.10.3"
openssl = { version = "0.10", features = ["vendored"] }
rmcp = { version = "0.12.0", features = ["server", "transport-io"] }
dirs = "5.0"
toml = "0.9"
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lib]
name = "jwt_hack"
path = "src/lib.rs"

[[bin]]
name = "jwt-hack"
path = "src/main.rs"
